--- a/eShopSolution.AdminApp/Views/Home/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/Home/Index.cshtml
@@ -1,10 +1,14 @@
 ﻿@{
     ViewData["Title"] = "Trang chủ";
 }
-
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb my-breadcrumb">
+        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Trang chủ</li>
+    </ol>
+</nav>
 <div class="welcome-msg pt-3 pb-4">
-    <h1>Hi <span class="text-primary">John</span>, Welcome back</h1>
-    <p>Very detailed & featured admin.</p>
+    <h1>Xin chào ! <span class="text-primary">@User.Identity.Name</span>, Chào mừng bạn quay trở lại !</h1>
 </div>
 <!-- statistics data -->
 <div class="statistics">
@@ -15,14 +19,14 @@
                     <div class="card card_border border-primary-top p-4">
                         <i class="lnr lnr-users"> </i>
                         <h3 class="text-primary number">29.75 M</h3>
-                        <p class="stat-text">Total Users</p>
+                        <p class="stat-text">Tổng nhân viên</p>
                     </div>
                 </div>
                 <div class="col-sm-6 pl-sm-2 statistics-grid">
                     <div class="card card_border border-primary-top p-4">
                         <i class="lnr lnr-eye"> </i>
                         <h3 class="text-secondary number">51.25 K</h3>
-                        <p class="stat-text">Daily Visitors</p>
+                        <p class="stat-text">Công nợ</p>
                     </div>
                 </div>
             </div>
@@ -33,14 +37,14 @@
                     <div class="card card_border border-primary-top p-4">
                         <i class="lnr lnr-cloud-download"> </i>
                         <h3 class="text-success number">166.89 M</h3>
-                        <p class="stat-text">Downloads</p>
+                        <p class="stat-text">Sinh nhật</p>
                     </div>
                 </div>
                 <div class="col-sm-6 pl-sm-2 statistics-grid">
                     <div class="card card_border border-primary-top p-4">
                         <i class="lnr lnr-cart"> </i>
                         <h3 class="text-danger number">1,250k</h3>
-                        <p class="stat-text">Purchased</p>
+                        <p class="stat-text">Ngày lễ</p>
                     </div>
                 </div>
             </div>
@@ -54,7 +58,7 @@
         <div class="col-lg-6 pr-lg-2 chart-grid">
             <div class="card text-center card_border">
                 <div class="card-header chart-grid__header">
-                    Bar Chart
+                    Biểu đồ cột
                 </div>
                 <div class="card-body">
                     <!-- bar chart -->
@@ -64,14 +68,14 @@
                     <!-- //bar chart -->
                 </div>
                 <div class="card-footer text-muted chart-grid__footer">
-                    Updated 2 hours ago
+                    Cập nhật sau 2 giờ
                 </div>
             </div>
         </div>
         <div class="col-lg-6 pl-lg-2 chart-grid">
             <div class="card text-center card_border">
                 <div class="card-header chart-grid__header">
-                    Line Chart
+                    Biểu đồ đường
                 </div>
                 <div class="card-body">
                     <!-- line chart -->
@@ -81,7 +85,7 @@
                     <!-- //line chart -->
                 </div>
                 <div class="card-footer text-muted chart-grid__footer">
-                    Updated just now
+                    Cập nhật liên tục
                 </div>
             </div>
         </div>
@@ -89,7 +93,7 @@
 </div>
 <!-- //charts -->
 <!-- chatting -->
-<div class="data-tables">
+@*<div class="data-tables">
     <div class="row">
         <div class="col-lg-12 chart-grid mb-4">
             <div class="card card_border p-4">
@@ -260,13 +264,13 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 <!-- //chatting -->
 <!-- accordions -->
-<div class="accordions">
-    <div class="row">
+<!--<div class="accordions">
+    <div class="row">-->
         <!-- accordion style 1 -->
-        <div class="col-lg-12 mb-4">
+        <!--<div class="col-lg-12 mb-4">
             <div class="card card_border">
                 <div class="card-header chart-grid__header">
                     Bootstrap Accordions
@@ -324,13 +328,13 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
         <!-- //accordion style 1 -->
-    </div>
-</div>
+    <!--</div>
+</div>-->
 <!-- //accordions -->
 <!-- modals -->
-<section class="template-cards">
+<!--<section class="template-cards">
     <div class="card card_border">
         <div class="cards__heading">
             <h3>Modals - <span>2 different types of bootstrap modals</span></h3>
@@ -342,15 +346,15 @@
                         <div class="card-header chart-grid__header">
                             Demo modal
                         </div>
-                        <div class="card-body">
+                        <div class="card-body">-->
                             <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-primary btn-style" data-toggle="modal"
+                            <!--<button type="button" class="btn btn-primary btn-style" data-toggle="modal"
                                     data-target="#exampleModal">
                                 Launch demo
-                            </button>
+                            </button>-->
 
                             <!-- Modal -->
-                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                            <!--<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
                                  aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
@@ -378,14 +382,14 @@
                         <div class="card-header chart-grid__header">
                             Vertical centered
                         </div>
-                        <div class="card-body">
+                        <div class="card-body">-->
                             <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-primary btn-style" data-toggle="modal"
+                            <!--<button type="button" class="btn btn-primary btn-style" data-toggle="modal"
                                     data-target="#exampleModalCenter">
                                 Launch demo
-                            </button>
+                            </button>-->
                             <!-- Modal -->
-                            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+                            <!--<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
                                  aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered" role="document">
                                     <div class="modal-content">
@@ -411,4 +415,4 @@
             </div>
         </div>
     </div>
-</section>
+</section>-->
