--- a/eShopSolution.AdminApp/Views/Login/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/Login/Index.cshtml
@@ -32,7 +32,7 @@ Author URL: http://w3layouts.com
                 </div>
                 <div class="form-section">
                     <h3>Đăng nhập</h3>
-                    <form asp-action="Login" asp-controller="User" method="post" class="signin-form">
+                    <form asp-action="Index" asp-controller="Login" method="post" class="signin-form">
                         <div class="form-input">
                             <input type="text" asp-for="UserName" placeholder="Tên đăng nhập" required="" autofocus>
                         </div>
@@ -46,7 +46,7 @@ Author URL: http://w3layouts.com
                         </label>
                         <button type="submit" class="btn btn-primary theme-button mt-4">Đăng nhập</button>
                         <div class="new-signup">
-                            <a href="#reload" class="signuplink">Quên mật khẩu?</a>
+                            <a href="#reload" class="signuplink">Quên mật khẩu ?</a>
                         </div>
                     </form>
                     <p class="signup">Bạn có tài khoản chưa ? <a href="#signup.html" class="signuplink">Đăng ký</a></p>
@@ -59,7 +59,7 @@ Author URL: http://w3layouts.com
 
         <!-- copyright -->
         <div class="copy-right">
-            <p>&copy; 2020 Giao diện đăng nhập. All rights reserved | Design by <a href="http://sonhoangvan.com/" target="_blank">HOÀNG SƠN</a></p>
+            <p>&copy; 2020 Giao diện đăng nhập. All rights reserved | Design by <a href="http://sonhoangvan.com/" target="_blank">Hoàng Sơn</a></p>
         </div>
         <!-- //copyright -->
     </section>
