--- a/eShopSolution.AdminApp/wwwroot/assets/css/style-starter.css
+++ b/eShopSolution.AdminApp/wwwroot/assets/css/style-starter.css
@@ -1,4 +1,4 @@
-/* 
+﻿/* 
 Author: W3layouts
 Author URL: http://w3layouts.com
 */
@@ -11630,8 +11630,11 @@ ul.dropdown-menu.drp-mnu.show li {
   margin-left: 0; }
 
 li.logout {
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px; }
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background-color: #ffa29d;
+    font-weight: bold;
+}
 
 h5.user-name {
   color: #fff;
@@ -11646,10 +11649,11 @@ ul.dropdown-menu.drp-mnu li a:hover {
   background-color: rgba(71, 90, 171, 0.04); }
 
 ul.dropdown-menu.drp-mnu li a i {
-  width: 34px;
-  font-size: 15px;
-  line-height: 25px;
-  color: var(--primary); }
+    width: 34px;
+    font-size: 15px;
+    line-height: 25px;
+    color: #fd0000;
+}
 
 .profile_img span {
   float: left;
