--- a/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
+++ b/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
@@ -87,8 +87,8 @@ Author URL: http://w3layouts.com
                 <!-- //sidebar nav end -->
                 <!-- toggle button start -->
                 <a class="toggle-btn">
-                    <i class="fa fa-angle-double-left menu-collapsed__left"><span>Thu nhỏ thanh Sidebar</span></i>
-                    <i class="fa fa-angle-double-right menu-collapsed__right"></i>
+                    <i class="fa fa-angle-double-left menu-collapsed__left"><span>Thu gọn</span></i>
+                    <i class="fa fa-angle-double-right menu-collapsed__right" title="Mở rộng"></i>
                 </a>
                 <!-- //toggle button end -->
             </div>
@@ -260,7 +260,7 @@ Author URL: http://w3layouts.com
     </footer>
     <!--footer section end-->
     <!-- move top -->
-    <button onclick="topFunction()" id="movetop" class="bg-primary" title="Go to top">
+    <button onclick="topFunction()" id="movetop" class="bg-primary" title="Lên đầu trang">
         <span class="fa fa-angle-up"></span>
     </button>
     <script>
@@ -293,8 +293,8 @@ Author URL: http://w3layouts.com
     <script src="/assets/js/utils.js"></script>
     <!-- //chart js -->
     <!-- Different scripts of charts.  Ex.Barchart, Linechart -->
-    <script src="/assets/js/bar.js"></script>
-    <script src="/assets/js/linechart.js"></script>
+    <script src="/assets/js/bar.js" charset="UTF-8"></script>
+    <script src="/assets/js/linechart.js" charset="UTF-8"></script>
     <!-- //Different scripts of charts.  Ex.Barchart, Linechart -->
 
     <script src="/assets/js/jquery.nicescroll.js"></script>
