--- a/eShopSolution.AdminApp/Views/User/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/User/Index.cshtml
@@ -11,7 +11,7 @@
         <li class="breadcrumb-item active" aria-current="page">Danh sách người sử dụng</li>
     </ol>
 </nav>
-<a class="btn btn-success btn-style mt-4" asp-action="Create" asp-controller="User"><i class="fa fa-plus-square-o"></i> Tạo mới tài khoản</a>
+<a class="btn btn-success btn-style mt-4" asp-action="Create" asp-controller="User"><i class="fa fa-user-plus" aria-hidden="true"></i> Tạo mới tài khoản</a>
 <hr />
 <!-- //pricing version 2 -->
 <!-- //pricing -->
@@ -41,7 +41,8 @@
                                     <li class="list-group-item">Email: @Html.DisplayFor(modelItem => item.Email)</li>
                                     <li class="list-group-item">@Html.HiddenFor(modelItem => item.Id)</li>
                                 </ul>
-                                <a href="#" data-target="#exampleModalCenter" data-toggle="modal" class="btn btn-style btn-primary mt-4"><i class="fa fa-pencil" aria-hidden="true"></i> Sửa</a>
+                                @*@Html.ActionLink("Sửa", "Edit", "User", new { id = item.Id }, new { @class = "btn btn-style btn-primary mt-4" })*@
+                                <a href="@Url.Action("Edit","User",new {id = item.Id})"class="btn btn-style btn-primary mt-4"><i class="fa fa-pencil" aria-hidden="true"></i> Sửa</a>
                                 <a href="#" data-target="#exampleModalCenter" data-toggle="modal" class="btn btn-style btn-primary mt-4"><i class="fa fa-info-circle" aria-hidden="true"></i> Chi tiết</a>
                                 <a href="#" data-target="#exampleModalCenter" data-toggle="modal" class="btn btn-style btn-danger mt-4"><i class="fa fa-trash-o" aria-hidden="true"></i> Xóa</a>
                             </div>
@@ -57,16 +58,16 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Thông báo !</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <h5 class="modal-title" style="color:orange" id="exampleModalLongTitle"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Thông báo !</h5>
+                <button type="button" style="color:red" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                Chức năng hiện tại chưa có !
+            <div class="modal-body" style="color:red">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>  Chức năng hiện tại chưa có !
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-window-close" aria-hidden="true"></i> Đóng</button>
                 @*<button type="button" class="btn btn-success">Save changes</button>*@
             </div>
         </div>
