--- a/eShopSolution.AdminApp/wwwroot/assets/css/style-starter.css
+++ b/eShopSolution.AdminApp/wwwroot/assets/css/style-starter.css
@@ -3881,10 +3881,12 @@ input[type="button"].btn-block {
   flex: 1; }
 
 .list-group {
-  display: flex;
-  flex-direction: column;
-  padding-left: 0;
-  margin-bottom: 0; }
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    margin-bottom: 0;
+    font-weight: bold;
+}
 
 .list-group-item-action {
   width: 100%;
