--- a/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
+++ b/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@ Author URL: http://w3layouts.com
                     <li class="active">
                         <a asp-action="Index" asp-controller="Home"><i class="fa fa-home" aria-hidden="true"></i><span> Trang chủ</span></a>
                     </li>
-                    <li  class="menu-list">
+                    <li class="menu-list">
                         <a href="#">
                             <i class="fa fa-user-circle-o" aria-hidden="true"></i>
                             <span>Người sử dụng <i class="lnr lnr-chevron-right"></i></span>
@@ -102,13 +102,12 @@ Author URL: http://w3layouts.com
             <div class="menu-right">
                 <div class="navbar user-panel-top">
                     @*<div class="search-box">
-                            <form action="#search-results.html" method="get">
-                                <input class="search-input" placeholder="Tìm kiếm..." type="search" id="search">
-                                <button class="search-submit" value=""><span class="fa fa-search"></span></button>
-                            </form>
-                        </div>*@
+                        <form action="#search-results.html" method="get">
+                            <input class="search-input" placeholder="Tìm kiếm..." type="search" id="search">
+                            <button class="search-submit" value=""><span class="fa fa-search"></span></button>
+                        </form>
+                    </div>*@
                     <div class="user-dropdown-details d-flex">
-                        @await Component.InvokeAsync("Navigation")
                         <div class="profile_details_left">
                             <ul class="nofitications-dropdown">
                                 <li class="dropdown">
@@ -155,59 +154,59 @@ Author URL: http://w3layouts.com
                                         </li>
                                     </ul>
                                 </li>
-                                @*<li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        <i class="fa fa-comment-o"></i><span class="badge blue">4</span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <div class="notification_header">
-                                <h3>Bạn có 4 tin nhắn mới</h3>
-                            </div>
-                        </li>
-                        <li>
-                            <a href="#" class="grid">
-                                <div class="user_img"><img src="/assets/images/avatar1.jpg" alt=""></div>
-                                <div class="notification_desc">
-                                    <p>Johnson purchased template</p>
-                                    <span>Just Now</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="odd">
-                            <a href="#" class="grid">
-                                <div class="user_img"><img src="/assets/images/avatar2.jpg" alt=""></div>
-                                <div class="notification_desc">
-                                    <p>New customer registered </p>
-                                    <span>1 hour ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="grid">
-                                <div class="user_img"><img src="/assets/images/avatar3.jpg" alt=""></div>
-                                <div class="notification_desc">
-                                    <p>Lorem ipsum dolor sit amet </p>
-                                    <span>2 hours ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="grid">
-                                <div class="user_img"><img src="/assets/images/avatar1.jpg" alt=""></div>
-                                <div class="notification_desc">
-                                    <p>Johnson purchased template</p>
-                                    <span>Just Now</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <div class="notification_bottom">
-                                <a href="#all" class="bg-primary">Xem tất cả tin nhắn</a>
-                            </div>
-                        </li>
-                    </ul>
-                </li>*@
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                        <i class="fa fa-comment-o"></i><span class="badge blue">4</span>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li>
+                                            <div class="notification_header">
+                                                <h3>Bạn có 4 tin nhắn mới</h3>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="grid">
+                                                <div class="user_img"><img src="/assets/images/avatar1.jpg" alt=""></div>
+                                                <div class="notification_desc">
+                                                    <p>Johnson purchased template</p>
+                                                    <span>Just Now</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li class="odd">
+                                            <a href="#" class="grid">
+                                                <div class="user_img"><img src="/assets/images/avatar2.jpg" alt=""></div>
+                                                <div class="notification_desc">
+                                                    <p>New customer registered </p>
+                                                    <span>1 hour ago</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="grid">
+                                                <div class="user_img"><img src="/assets/images/avatar3.jpg" alt=""></div>
+                                                <div class="notification_desc">
+                                                    <p>Lorem ipsum dolor sit amet </p>
+                                                    <span>2 hours ago</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="grid">
+                                                <div class="user_img"><img src="/assets/images/avatar1.jpg" alt=""></div>
+                                                <div class="notification_desc">
+                                                    <p>Johnson purchased template</p>
+                                                    <span>Just Now</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <div class="notification_bottom">
+                                                <a href="#all" class="bg-primary">Xem tất cả tin nhắn</a>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                         <div class="profile_details">
